fix(tiptap): bubble-menu vs drag-handle z-index

--- a/tiptap/src/styles/index.scss
+++ b/tiptap/src/styles/index.scss
@@ -95,6 +95,10 @@ body,
 
     & ~ div {
       z-index: 2;
+
+      &[tabindex="0"] {
+        z-index: 3;
+      }
     }
   }
 }
